Update session logs to support user type