@@ -2,11 +2,10 @@ package teammates.ui.output;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import teammates.storage.entity.FeedbackSession;
 import teammates.storage.entity.FeedbackSessionLog;
-import teammates.storage.entity.Student;
+import teammates.storage.entity.User;
 
 /**
  * The response log of a single feedback session.
@@ -16,14 +15,14 @@ public class FeedbackSessionLogData {
     private final List<FeedbackSessionLogEntryData> feedbackSessionLogEntries;
 
     public FeedbackSessionLogData(FeedbackSession feedbackSession, List<FeedbackSessionLog> logEntries,
-            Map<String, Student> studentsMap) {
+            Map<String, User> usersMap) {
         FeedbackSessionData fsData = new FeedbackSessionData(feedbackSession);
         List<FeedbackSessionLogEntryData> fsLogEntryDatas = logEntries.stream()
                 .map(log -> {
-                    Student student = studentsMap.get(log.getStudent().getEmail());
-                    return new FeedbackSessionLogEntryData(log, student);
+                    User user = usersMap.get(log.getUser().getEmail());
+                    return new FeedbackSessionLogEntryData(log, user);
                 })
-                .collect(Collectors.toList());
+                .toList();
         this.feedbackSessionData = fsData;
         this.feedbackSessionLogEntries = fsLogEntryDatas;
     }
